--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bscheshir/hyphenation-grid",
-    "description": "Yii widget "multiline row" for zii.widgets.grid.CGridView",
+    "description": "Yii widget 'multiline row' for zii.widgets.grid.CGridView",
     "license": "MIT",
     "authors": [
         {
